Создано с помощью Colaboratory

--- a/add_zeros.ipynb
+++ b/add_zeros.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuEvMDctdQ2tKxdx+EUhvU",
+      "authorship_tag": "ABX9TyM6gx8Z075K4tHkCF38AoVS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,17 +48,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 1,
       "metadata": {
         "id": "IKSkYAcXYiWv"
       },
       "outputs": [],
       "source": [
         "import typing as tp\n",
-        "import numpy as np\n",
-        "import dataclasses\n",
-        "import pytest\n",
-        "from numpy.testing import assert_array_equal"
+        "import numpy as np"
       ]
     },
     {
@@ -68,75 +65,48 @@
         "    array_trans = array.T\n",
         "    array_zero = np.zeros_like(array_trans)\n",
         "    duo_matrix = np.column_stack((array_trans, array_zero)).ravel()\n",
-        "    return duo_matrix[:-1]\n",
-        "\n",
-        "max_element(np.zeros(10))"
+        "    return duo_matrix[:-1]"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "m7TKJ8lGYvJ_",
-        "outputId": "a44bf472-a082-460e-b860-a73505c365f9"
+        "id": "m7TKJ8lGYvJ_"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "       0., 0.])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "@dataclasses.dataclass\n",
-        "class AddZerosCase:\n",
-        "    array: np.ndarray\n",
-        "    result: np.ndarray\n",
-        "\n",
-        "\n",
-        "ADD_ZEROS_TEST_CASES = [\n",
-        "    AddZerosCase(\n",
-        "        array=np.array([1, 2, 3]),\n",
-        "        result=np.array([1, 0, 2, 0, 3])),\n",
-        "    AddZerosCase(\n",
-        "        array=np.array([]),\n",
-        "        result=np.array([])),\n",
-        "    AddZerosCase(\n",
-        "        array=np.array([1]),\n",
-        "        result=np.array([1])),\n",
-        "    AddZerosCase(\n",
-        "        array=np.array([1, 1]),\n",
-        "        result=np.array([1, 0, 1])),\n",
-        "    AddZerosCase(\n",
-        "        array=np.array([0]),\n",
-        "        result=np.array([0])),\n",
-        "    AddZerosCase(\n",
-        "        array=np.array([1, 0, 0, 1]),\n",
-        "        result=np.array([1, 0, 0, 0, 0, 0, 1])),\n",
-        "    AddZerosCase(\n",
-        "        array=np.zeros(10),\n",
-        "        result=np.zeros(19)),\n",
-        "]\n",
-        "\n",
-        "\n",
-        "@pytest.mark.parametrize('t', ADD_ZEROS_TEST_CASES, ids=str)\n",
-        "def test_construct_matrix(t: AddZerosCase) -> None:\n",
-        "    assert_array_equal(add_zeros(t.array), t.result)"
+        "print(max_element(array=np.array([1, 2, 3])))\n",
+        "print(max_element(array=np.array([])))\n",
+        "print(max_element(array=np.array([1])))\n",
+        "print(max_element(array=np.array([1, 1])))\n",
+        "print(max_element(array=np.array([0])))\n",
+        "print(max_element(array=np.array([1, 0, 0, 1])))\n",
+        "print(max_element(array=np.zeros(10)))"
       ],
       "metadata": {
-        "id": "bersAMZs9-cj"
+        "id": "bersAMZs9-cj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c39d9a5e-8f1b-4aca-f6d7-47835008e399"
       },
-      "execution_count": 25,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 0 2 0 3]\n",
+            "[]\n",
+            "[1]\n",
+            "[1 0 1]\n",
+            "[0]\n",
+            "[1 0 0 0 0 0 1]\n",
+            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+          ]
+        }
+      ]
     }
   ]
 }
