Создано с помощью Colaboratory

--- a/add_zeros.ipynb
+++ b/add_zeros.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6gx8Z075K4tHkCF38AoVS",
+      "authorship_tag": "ABX9TyMN/P8joXdqq9WSY5u+Sujh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "IKSkYAcXYiWv"
       },
@@ -61,7 +61,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def max_element(array: np.ndarray) -> tp.Optional[float]:\n",
+        "def add_zeros(array: np.ndarray) -> tp.Optional[float]:\n",
         "    array_trans = array.T\n",
         "    array_zero = np.zeros_like(array_trans)\n",
         "    duo_matrix = np.column_stack((array_trans, array_zero)).ravel()\n",
@@ -70,28 +70,28 @@
       "metadata": {
         "id": "m7TKJ8lGYvJ_"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(max_element(array=np.array([1, 2, 3])))\n",
-        "print(max_element(array=np.array([])))\n",
-        "print(max_element(array=np.array([1])))\n",
-        "print(max_element(array=np.array([1, 1])))\n",
-        "print(max_element(array=np.array([0])))\n",
-        "print(max_element(array=np.array([1, 0, 0, 1])))\n",
-        "print(max_element(array=np.zeros(10)))"
+        "print(add_zeros(array=np.array([1, 2, 3])))\n",
+        "print(add_zeros(array=np.array([])))\n",
+        "print(add_zeros(array=np.array([1])))\n",
+        "print(add_zeros(array=np.array([1, 1])))\n",
+        "print(add_zeros(array=np.array([0])))\n",
+        "print(add_zeros(array=np.array([1, 0, 0, 1])))\n",
+        "print(add_zeros(array=np.zeros(10)))"
       ],
       "metadata": {
         "id": "bersAMZs9-cj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c39d9a5e-8f1b-4aca-f6d7-47835008e399"
+        "outputId": "6fdb4446-b92f-4147-f3f8-3b80953ba080"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
