Создано с помощью Colaboratory

--- a/max_element.ipynb
+++ b/max_element.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1ssflxWuBU2b3AT5Is2GM",
+      "authorship_tag": "ABX9TyMUOLmDmJQRxLNs4esVpS70",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "ZgU6FXTz-wwU"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,22 +75,22 @@
       "metadata": {
         "id": "S88aflJt_AAz"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(max_element(np.array([0])))"
+        "print(max_element(np.array([6, 6])))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tqSZ-YucUjX0",
-        "outputId": "2dd18862-9e16-4c06-d9a9-b4550f8b078e"
+        "outputId": "a44458a4-5d6d-40b1-92a5-6b605628c85f"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,63 +104,45 @@
     {
       "cell_type": "code",
       "source": [
-        "import dataclasses\n",
-        "import pytest\n",
-        "from numpy.testing import assert_array_equal\n",
-        "\n",
-        "\n",
-        "@dataclasses.dataclass\n",
-        "class MaxElementCase:\n",
-        "    array: np.ndarray\n",
-        "    result: tp.Optional[float]\n",
-        "\n",
-        "\n",
-        "MAX_ELEMENT_TEST_CASES = [\n",
-        "    MaxElementCase(\n",
-        "        array=np.array([1, 0, 2, 3]),\n",
-        "        result=2),\n",
-        "    MaxElementCase(\n",
-        "        array=np.array([6, 2, 0, 3, 0, 0, 5, 7, 0]),\n",
-        "        result=5),\n",
-        "    MaxElementCase(\n",
-        "        array=np.array([6, 6]),\n",
-        "        result=None),\n",
-        "    MaxElementCase(\n",
-        "        array=np.zeros(3),\n",
-        "        result=0),\n",
-        "    MaxElementCase(\n",
-        "        array=np.array([0, 1]),\n",
-        "        result=1),\n",
-        "    MaxElementCase(\n",
-        "        array=np.array([1, 0]),\n",
-        "        result=None),\n",
-        "    MaxElementCase(\n",
-        "        array=np.array([1, 0, 0, -1]),\n",
-        "        result=0),\n",
-        "    MaxElementCase(\n",
-        "        array=np.array([0]),\n",
-        "        result=None),\n",
-        "    MaxElementCase(\n",
-        "        array=np.array([1]),\n",
-        "        result=None),\n",
-        "    MaxElementCase(\n",
-        "        array=np.array([0, 1, 2, 0, 10]),\n",
-        "        result=10),\n",
-        "    MaxElementCase(\n",
-        "        array=np.array([6, 2, 0, 3, 0, 0, 9, 4]),\n",
-        "        result=9),\n",
-        "]\n",
-        "\n",
-        "\n",
-        "@pytest.mark.parametrize('t', MAX_ELEMENT_TEST_CASES, ids=str)\n",
-        "def test_construct_matrix(t: MaxElementCase) -> None:\n",
-        "    assert_array_equal(max_element(t.array), t.result)\n"
+        "print(max_element(array=np.array([1, 0, 2, 3])))\n",
+        "print(max_element(array=np.array([6, 2, 0, 3, 0, 0, 5, 7, 0])))\n",
+        "print(max_element(array=np.array([6, 6])))\n",
+        "print(max_element(array=np.zeros(3)))\n",
+        "print(max_element(array=np.array([0, 1])))\n",
+        "print(max_element(array=np.array([1, 0])))\n",
+        "print(max_element(array=np.array([1, 0, 0, -1])))\n",
+        "print(max_element(array=np.array([0])))\n",
+        "print(max_element(array=np.array([1])))\n",
+        "print(max_element(array=np.array([0, 1, 2, 0, 10])))\n",
+        "print(max_element(array=np.array([6, 2, 0, 3, 0, 0, 9, 4])))"
       ],
       "metadata": {
-        "id": "LJfbvEHnUwcX"
+        "id": "LJfbvEHnUwcX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a74d682a-6f20-4a76-a506-4f06f50f7c08"
       },
-      "execution_count": 45,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "5\n",
+            "None\n",
+            "0.0\n",
+            "1\n",
+            "None\n",
+            "0\n",
+            "None\n",
+            "None\n",
+            "10\n",
+            "9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
